--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<div class="center">
 			<div class="contact">
 				<h2>Kontakt</h2>
-				<p>Matouš Demko | Telefon: 604 666 781 | Email: demkomatous&#64;gmail.com | <a href="www.linkedin.com/in/matous-demko" title="LinkedIn" class="linkedin">LinkedIn</a></p>
+				<p>Matouš Demko | Telefon: 604 666 781 | Email: demkomatous&#64;gmail.com | <a href="https://www.linkedin.com/in/matous-demko/" title="LinkedIn" class="linkedin">LinkedIn</a></p>
 			</div>
 		</div>
 	</section>
