--- a/index.html
+++ b/index.html
@@ -9,40 +9,41 @@
 	<meta name="author" content="Matouš Demko" />
 	<!-- CSS -->
 	<link rel="stylesheet" type="text/css" href="CSS/style.css">
-	<link rel="shortcut icon" href="Images/Kalcit/Kalcit.ico" />
+	<link rel="shortcut icon" href="Images/Icon/Icon.png" />
 </head>
 <body>
 	<header class="dark">
-		<div class="center">
-			<p>
-				................... ....................... ...................... ............ ................ ......................... ............ .................... .......................
-			</p>
-		</div>
+		<h1>
+			<img src="Images/Header/Logo.png" alt="Logo Matouše Demka">
+		</h1>
 	</header>
 	<section class="light about">
 		<div class="center">
 			<p>
 				Studuji střední školu v oboru vývoje a testování aplikací. Informační technologie jsou mojí prací i koníčkem. Jsem zakladatelem a spolumajitelem internetové databáze vzorečků a online kalkulaček <a href="https://www.calcit.eu/" title="calcit.eu" target="_blank">calcit.eu</a>, na jejímž vývoji se aktivně podílím. Zabývám se převážně vývojem webových stránek a operačními systémy.
 			</p>
+			<p>
+				<img class="portrait" src="Images/Photo/Portrait.jpg" alt="Portrét Matouše Demka">
+			</p>
 		</div>
 		<div class="line"></div>
 		<div class="center">
 			<div class="contact">
 				<h2>Kontakt</h2>
-				<p>Matouš Demko | Telefon: 604 666 781 | Email: demkomatous&#64;gmail.com | <a href="https://www.linkedin.com/in/matous-demko/" title="LinkedIn" class="linkedin">LinkedIn</a></p>
+				<p>Matouš Demko | Telefon: 604 666 781 | Email: demkomatous&#64;gmail.com | <a href="https://www.linkedin.com/in/matous-demko/" title="LinkedIn" target="_blank" class="linkedin">LinkedIn</a></p>
 			</div>
 		</div>
 	</section>
 	<section class="dark offers">
-		<h2 class="title">Co mohu nabídnou?</h2>
+		<h2 class="title">Co mohu nabídnout?</h2>
 		<div class="offer">
 			<div class="next">
 				<div class="box">
 					<h3>Zálohování a obnova dat</h3>
 					<ul class="android">
-						<li>Záloha Vašich kontaktů, SMS a WhatsApp zpráv <span class="more"><a href="#depositSMSContactsWA" title="Podrobnosti o zálohování Vašich kontaktů, SMS a WhatsApp zpráv">více</a></span></li>
-						<li>Záloha Vašich osobních dat <span class="more"><a href="#depositPersonalData" title="Podrobnosti o zálohování Vašich osobních dat">více</a></span></li>
-						<li>Obnova Vašich dat ze zálohy <span class="more"><a href="#recoveryPersonalData" title="Podrobnosti o obnově dat ze zálohy">více</a></span></li>
+						<li>Záloha vašich kontaktů, SMS a WhatsApp zpráv <span class="more"><a href="#depositSMSContactsWA" title="Podrobnosti o zálohování Vašich kontaktů, SMS a WhatsApp zpráv">více</a></span></li>
+						<li>Záloha vašich osobních dat <span class="more"><a href="#depositPersonalData" title="Podrobnosti o zálohování Vašich osobních dat">více</a></span></li>
+						<li>Obnova vašich dat ze zálohy <span class="more"><a href="#recoveryPersonalData" title="Podrobnosti o obnově dat ze zálohy">více</a></span></li>
 						<li>Obnova úplně smazaných souborů v omezeném rozsahu <span class="more"><a href="#deletedDataRecovery" title="Podrobnosti o obnově úplně smazaných souborů">více</a></span></li>
 						<li>Získání dat z nefunkčního zařízení v omezeném rozsahu <span class="more"><a href="#dataRecoveryFromBrickedDevice" title="Podrobnosti o získání dat z nefunkčního zařízení">více</a></span></li>
 					</ul>
@@ -79,13 +80,13 @@
 		</div>
 		<div class="clear"></div>
 		<p class="center">
-			Řeším i individuální potřeby. Ceny služeb jsou příznivé a vždy po vzájemné dohodě. V některých případech jsem schopen pomoci ihned a online. Pro více informací mě kontaktujte.
+			Řeším i vaše individuální potřeby. Ceny služeb jsou příznivé a vždy po vzájemné dohodě. V některých případech jsem schopen pomoci ihned a online. Pro více informací mě kontaktujte.
 		</p>
 	</section>
 	<section class="light city">
 		<div class="center">
 			<h2>Kde působím?</h2>
-			<p>Působím po celé Praze, v Černošicích, Dobřichovicích, Letech, Řevnicích a Všenorech.</p>
+			<p>Působím v Praze, Černošicích, Dobřichovicích, Letech, Řevnicích a Všenorech.</p>
 		</div>
 	</section>
 	<section class="dark definitionOfWork">
@@ -102,7 +103,6 @@
 						<li>Pevný počítač</li>
 						<li>Televize</li>
 						<li>Chytré hodinky</li>
-						<li>Phablet</li>
 					</ul>
 				</div>
 				<div class="infoBox">
@@ -119,7 +119,7 @@
 					</ul>
 				</div>
 			</div>
-			<p class="alignCenter">Vždy pracuji se všemi verzemi a zařezeními, pokud není uvedeno jinak.</p>
+			<p class="alignCenter">Vždy pracuji se všemi verzemi a zařízeními, pokud není uvedeno jinak.</p>
 		</div>
 		<div class="clear"></div>
 	</section>
@@ -130,7 +130,7 @@
 				<div class="box" id="virtual">
 					<h3>Spuštění programů, které nefungují na nových verzích operačního systému</h3>
 					<p>
-						Vzpomněli jste si po letech na super hru, která nefunguje na nových operačních systémech, nebo je vyvinuta pouze pro operační systém, který nemáte? Chcete si ji zahrát? Nebo jste prostě jen fanoušek staré klasiky a chcete si ji zahrát v jedné z prvních verzí? Není problém stačí zavolat a domluvím se s Vámi. Službu poskytuji na operační systémy Windows a Linux.
+						Vzpomněli jste si po letech na super hru, která nefunguje na nových operačních systémech, nebo je vyvinuta pouze pro operační systém, který nemáte? Chcete si ji zahrát? Nebo jste prostě jen fanoušek staré klasiky a chcete si ji zahrát v jedné z prvních verzí? Není problém stačí zavolat a domluvím se s vámi. Službu poskytuji na operační systémy Windows a Linux.
 					</p>
 				</div>
 				<div class="box" id="bitCopy">
@@ -144,13 +144,13 @@
 				<div class="box" id="systemInstall">
 					<h3>Instalace operačního systému</h3>
 					<p>
-						Sestavili jste si nový počítač nebo jste si jej koupili bez operačního systému? zavolejte, nebo napište a domluvíme co nejbližší termín, abyste mohli zařízení co nejdříve využívat naplno. 
+						Sestavili jste si nový počítač nebo jste si jej koupili bez operačního systému? Zavolejte, nebo napište a domluvíme co nejbližší termín, abyste mohli zařízení co nejdříve využívat naplno. 
 					</p>
 				</div>
 				<div class="box" id="systemReapir">
 					<h3>Oprava operačního systému</h3>
 					<p>
-						Oprava operačního systému je nutná v případě napadení virem, malwarem, trojským koněm nebo instalací nekompatibilní systémové aktualizace, které nejsou v případě společnosti Microsoft ojedinělé.
+						Oprava operačního systému je nutná v případě napadení virem, malwarem, trojským koněm nebo instalací nekompatibilní systémové aktualizace, které nejsou v případě společnosti Microsoft ojedinělé. Nejdná se však naštěstí o žádnou katastrofu. Stačí mi zavolat, nebo napsat email, a vaše zařízení bude šlapat jako hodinky.
 					</p>
 				</div>
 			</div>
@@ -158,13 +158,13 @@
 				<div class="box" id="depositPersonalData">
 					<h3>Záloha Vašich osobních dat</h3>
 					<p>
-						Ať už pracujete na důležité práci do školy nebo do práce, potřebujete zálohu. Vždy se může stát, že Vám zařízení odejde na věčnost a veškerá práce s ním. Se zálohou sice opláčete své zařízení, ale Vaše práce je v bezpečí na flash disku a čeká, až přijde její čas a zachrání Vaši práci.
+						Ať už pracujete na důležité práci do školy nebo do práce, potřebujete zálohu. Vždy se může stát, že vám zařízení odejde na věčnost a veškerá práce s ním. Se zálohou sice opláčete své zařízení, ale vaše práce je v bezpečí na flash disku a čeká, až si ji vyzvednete.
 					</p>
 				</div>
 				<div class="box" id="recoveryPersonalData">
 					<h3>Obnova Vašich dat ze zálohy</h3>
 					<p>
-						Máte zálohu kontaktů, souborů, SMS zpráv nebo dokonce systému a nadešel čas, kdy ji potřebujete? Žádný strach, i tohle udělám. Data z Vaší zálohy obnovím a vaše data máte zpět.
+						Máte zálohu kontaktů, souborů, SMS zpráv nebo dokonce systému a nadešel čas, kdy ji potřebujete? Žádný strach, i tohle udělám. Data z vaší zálohy obnovím a vaše data máte zpět.
 					</p>
 				</div>
 			</div>
@@ -172,13 +172,13 @@
 				<div class="box" id="deletedDataRecovery">
 					<h3>Obnova úplně smazaných souborů</h3>
 					<p>
-						Určitě se Vám už někdy stalo, že jste omylem odstranili ze zařízení soubor, který jste si chtěli nechat. Může se jednat o cokoliv. Úkol do školy nebo dokonce maturitní práci. I tento problém se dá v určitém rozsahu řešit. Pro zajištění co nejvyšší šance na úspěch při obnově nesmíte do zařízení nic ukládat. Žádné fotografie, videa a ani soubory. V ideálním případě mě hned kontaktovat a já udělám co bude v mých silách, abych Vaše soubory obnovil.
+						Určitě se vám už někdy stalo, že jste omylem odstranili ze zařízení soubor, který jste si chtěli nechat. Může se jednat o cokoliv. Úkol do školy nebo dokonce maturitní práci. I tento problém se dá v určitém rozsahu řešit. Pro zajištění co nejvyšší šance na úspěch při obnově nesmíte do zařízení nic ukládat. Žádné fotografie, videa a ani soubory. V ideálním případě mě hned kontaktovat a já udělám co bude v mých silách, abych vaše soubory obnovil.
 					</p>
 				</div>
 				<div class="box" id="changeSystem">
 					<h3>Změna verze operačního systému</h3>
 					<p>
-						Může se stát, že uděláte aktualizaci systému android a zařízení se Vám bude mnohem více sekat, fotky, které dříve byly krásné, jsou dnes přesvícené a zrnité. V těchto případech se vyplatí vrátit se ke starší verzi systému. Změna operačního systému android s sebou ale nese i úskalí. Tímto krokem Vám může u některých značek vypršet záruka. Zároveň dojde k úplnému smazání telefonu, ale o svá data se nemusíte bát. Zajistím zálohu i následnou obnovu vašich dat zpět do zařízení. Službu poskytuji na všechny operační systémy vyjma iOS.
+						Může se stát, že uděláte aktualizaci systému android a zařízení se Vám bude mnohem více sekat, fotky, které dříve byly krásné, jsou dnes přesvícené a zrnité. V těchto případech se vyplatí vrátit se ke starší verzi systému. Změna operačního systému android s sebou ale nese i úskalí. Tímto krokem vám může u některých značek vypršet záruka. Zároveň dojde k úplnému smazání telefonu, ale o svá data se nemusíte bát. Zajistím zálohu i následnou obnovu vašich dat zpět do zařízení. Službu poskytuji na všechny operační systémy vyjma iOS.
 					</p>
 				</div>
 			</div>
@@ -186,13 +186,13 @@
 				<div class="box" id="CDDVDDigital">
 					<h3>Digitalizace programů, filmů z CD/DVD disků a disket</h3>
 					<p>
-						Máte doma ještě hry, programy, filmy, fotky nebo písničky na CD, DVD discích nebo disketách a rádi byste je zdigitalizovali? Vaše data Vám jsem schopen dát na flash disk nebo hard disk a vše již budete mít ve svých rukách.
+						Máte doma ještě hry, programy, filmy, fotky nebo písničky na CD, DVD discích nebo disketách a rádi byste je zdigitalizovali? Vaše data vám jsem schopen dát na flash disk nebo hard disk a vše již budete mít ve svých rukách.
 					</p>
 				</div>
 				<div class="box" id="firstStart">
 					<h3>Nastavení počítače nebo telefonu při prvním spuštění</h3>
 					<p>
-						Koupili jste si nové zařízení a potřebujete pomoci provést prvotní nastavení systému, popřípadě nainstalovat operační systém? I s tímto Vám pomohu. Stačí zavolat a brzy si můžete užívat s novým zařízením. 
+						Koupili jste si nové zařízení a potřebujete pomoci provést prvotní nastavení systému, popřípadě nainstalovat operační systém? I s tímto vám pomohu. Stačí zavolat a brzy si můžete užívat s novým zařízením. 
 					</p>
 				</div>
 			</div>
@@ -200,7 +200,7 @@
 				<div class="box" id="depositSMSContactsWA">
 					<h3>Záloha Vašich kontaktů, SMS a WhatsApp zpráv</h3>
 					<p>
-						Chystáte se ke koupi nového telefonu a nebo jsou vaše kontakty a zprávy důležité? Ať už tak nebo tak, já udělám kompletní zálohu vašich kontaktů, SMS i WhatsApp zpráv. Potom již budete mít zálohu připravenou v pohotovosti a nebudete nešťasten, že se Vám porouchal telefon a Vy jste přišli o důležité pacovní kontakty a zprávy.
+						Chystáte se ke koupi nového telefonu a nebo jsou vaše kontakty a zprávy důležité? Ať už tak nebo tak, já udělám kompletní zálohu vašich kontaktů, SMS i WhatsApp zpráv. Potom již budete mít zálohu připravenou v pohotovosti a nebudete nešťastni, že se vám porouchal telefon a vy jste přišli o důležité pacovní kontakty a zprávy.
 					</p>
 				</div>
 				<div class="box" id="findMyPhone">
@@ -214,13 +214,13 @@
 				<div class="box" id="dataRecoveryFromBrickedDevice">
 					<h3>Získání dat z nefunkčního zařízení</h3>
 					<p>
-						Vaše zařízení Vás opustilo a Vy nemáte zálohu. Tomu se říká pech. Naštěstí i potom co přestalo fungovat existuje nějaká šance na obnovu dat. Záleží jen na tom, jak moc je poškozené. Službu poskytuji na všechny operační systémy.
+						Vaše zařízení vás opustilo a vy nemáte zálohu. Tomu se říká pech. Naštěstí i potom co přestalo fungovat existuje nějaká šance na obnovu dat. Záleží jen na tom, jak moc je poškozené.
 					</p>
 				</div>
 				<div class="box" id="installProblem">
 					<h3>Řešení problémů při instalaci softwaru, aplikace</h3>
 					<p>
-						Chcete si nainstalovat program nebo hru, ale zařízení Vám hlásí jen nepochopitelné errory nebo pro jistotu vůbec nic? Od toho jsem tady. Zavolejte mi nebo napište email, domluvíme nejbližší společný termín a problém vyřeším. 
+						Chcete si nainstalovat program nebo hru, ale zařízení vám hlásí jen nepochopitelné errory nebo pro jistotu vůbec nic? Od toho jsem tady. Zavolejte mi nebo napište email, domluvíme nejbližší společný termín a problém vyřeším. 
 					</p>
 				</div>
 			</div>
@@ -228,13 +228,13 @@
 				<div class="box" id="newDevice">
 					<h3>Výběr nového zařízení</h3>
 					<p>
-						Vaše stávající zařízení již dosluhuje, nebo dosloužilo a potřebujete rychlou náhradu. Možná se ptáte, proč byste se měli někoho ptát, jaké zařízení si vybrat. Odpověď je jednoduchá. Jsem člověk, který se o vývoj technologií zajímá a sleduji dění na poli informačních technologií. Vyznám se v parametrech procesorů, grafických karet i záladních desek. Na základě Vašich požadavků a účelu, ke kterému bude zařízení sloužit, vyberu to nejlepší ve Vámi stanovené cenové relaci. Pokud mi nevěříte, přesvědčte se sami. Zavolejte mi a uvidíte.
+						Vaše stávající zařízení již dosluhuje, nebo dosloužilo a potřebujete rychlou náhradu. Možná se ptáte, proč byste se měli někoho ptát, jaké zařízení si vybrat. Odpověď je jednoduchá. Jsem člověk, který se o vývoj technologií zajímá a má vždy aktuální informace. Vyznám se v parametrech procesorů, grafických karet i záladních desek. Na základě vašich požadavků a účelu, ke kterému bude zařízení sloužit, vyberu to nejlepší ve vámi stanovené cenové relaci. Pokud mi nevěříte, přesvědčte se sami. Zavolejte mi a uvidíte.
 					</p>
 				</div>
 				<div class="box" id="emulator">
 					<h3>Spuštění některých her pro telefon na počítači</h3>
 					<p>
-						Jste vášnivý hráč videoher a rád byste si zahrál i tituly pro telefon na počítači? Důvodů může být mnoho. Hraní na mobilu nebo tabletu Vás nebaví, nejde Vám a prostě jen Vaše zařízení nestíhá. Každý problém má východisko a i tady nabízím řešení. Řešení, které nabízím se týká převážně online her, například Call of Duty: Mobile nebo PUBG: Mobile. Rozhodně neslibuji, že spustím jakoukoliv. Ale jak zjistíte, že zrovna tu Vaši spustím? Odpověď je jednoduchá. Zavolejte mi nebo napište email a domluvíme se. Službu poskytuji na operační systémy Windows, Linux a MAC OS.
+						Jste vášnivý hráč videoher a rád byste si zahrál i tituly pro telefon na počítači? Důvodů může být mnoho. Hraní na mobilu nebo tabletu Vás nebaví, nejde vám a prostě jen vaše zařízení nestíhá. Každý problém má východisko a i tady nabízím řešení. Řešení, které nabízím se týká převážně online her, například Call of Duty: Mobile nebo PUBG: Mobile. Rozhodně neslibuji, že spustím jakoukoliv hru. Ale jak zjistíte, že zrovna tu vaši vyvolenou spustím? Odpověď je jednoduchá. Zavolejte mi nebo napište email a domluvíme se. Službu poskytuji na operační systémy Windows, Linux a MAC OS.
 					</p>
 				</div>
 			</div>
