--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<p>
 				Studuji střední školu v oboru vývoje a testování aplikací. Informační technologie jsou mojí prací i koníčkem. Jsem zakladatelem a spolumajitelem internetové databáze vzorečků a online kalkulaček <a href="https://www.calcit.eu/" title="calcit.eu" target="_blank">calcit.eu</a>, na jejímž vývoji se aktivně podílím. Zabývám se převážně vývojem webových stránek a operačními systémy.
 			</p>
-			<p>
+			<p class="portraitP">
 				<img class="portrait" src="Images/Photo/Portrait.jpg" alt="Portrét Matouše Demka">
 			</p>
 		</div>
