--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<div class="center">
 			<div class="contact">
 				<h2>Kontakt</h2>
-				<p>Matouš Demko | Telefon: 604 666 781 | Email: demkomatous&#64;gmail.com | <a href="https://www.linkedin.com/in/matous-demko/" title="LinkedIn" target="_blank" class="linkedin">LinkedIn</a></p>
+				<p>Matouš Demko | Telefon: 604 666 781 | Email: matousdemko&#64;gmail.com | <a href="https://www.linkedin.com/in/matous-demko/" title="LinkedIn" target="_blank" class="linkedin">LinkedIn</a></p>
 			</div>
 		</div>
 	</section>
@@ -54,7 +54,7 @@
 					<h3>Aplikace, software a hry</h3>
 					<ul class="android">
 						<li>Řešení problémů při instalaci softwaru, aplikace <span class="more"><a href="#installProblem" title="Podrobnosti o řešení problémů při instalaci softwaru, aplikace">více</a></span></li>
-						<li>Digitalizaci programů, filmů z CD/DVD disků a disket <span class="more"><a href="#CDDVDDigital" title="Podrobnosti o digitalizaci CD, DVD, disket">více</a></span></li>
+						<li>Digitalizaci CD/DVD disků a disket <span class="more"><a href="#CDDVDDigital" title="Podrobnosti o digitalizaci CD, DVD, disket">více</a></span></li>
 						<li>Pomoc se spuštěním programů, které nefungují na nových verzích operačního systému <span class="more"><a href="#virtual" title="Podrobnosti o pomoci se spuštěním programů, které nefungují na nových verzích operačního systému">více</a></span></li>
 						<li>Spuštění některých her pro telefon na počítači <span class="more"><a href="#emulator" title="Podrobnosti o spouštění některých her pro telefon na počítači">více</a></span></li>
 					</ul>
@@ -158,13 +158,13 @@
 			</div>
 			<div class="next">
 				<div class="box" id="depositPersonalData">
-					<h3>Záloha Vašich osobních dat</h3>
+					<h3>Záloha vašich osobních dat</h3>
 					<p>
-						Ať už pracujete na důležité práci do školy nebo do práce, potřebujete zálohu. Vždy se může stát, že vám zařízení odejde na věčnost a veškerá práce s ním. Se zálohou sice opláčete své zařízení, ale vaše práce je v bezpečí na flash disku a čeká, až si ji vyzvednete.
+						Ať už pracujete na důležité práci do školy nebo do práce, potřebujete zálohu. Vždy se může stát, že vám zařízení odejde na věčnost a veškerá práce s ním. Se zálohou sice opláčete své zařízení, ale vaše práce je v bezpečí a čeká, až si ji vyzvednete.
 					</p>
 				</div>
 				<div class="box" id="recoveryPersonalData">
-					<h3>Obnova Vašich dat ze zálohy</h3>
+					<h3>Obnova vašich dat ze zálohy</h3>
 					<p>
 						Máte zálohu kontaktů, souborů, SMS zpráv nebo dokonce systému a nadešel čas, kdy ji potřebujete? Žádný strach, i tohle udělám. Data z vaší zálohy obnovím a vaše data máte zpět.
 					</p>
@@ -180,13 +180,13 @@
 				<div class="box" id="changeSystem">
 					<h3>Změna verze operačního systému</h3>
 					<p>
-						Může se stát, že uděláte aktualizaci systému android a zařízení se Vám bude mnohem více sekat, fotky, které dříve byly krásné, jsou dnes přesvícené a zrnité. V těchto případech se vyplatí vrátit se ke starší verzi systému. Změna operačního systému android s sebou ale nese i úskalí. Tímto krokem vám může u některých značek vypršet záruka. Zároveň dojde k úplnému smazání telefonu, ale o svá data se nemusíte bát. Zajistím zálohu i následnou obnovu vašich dat zpět do zařízení. Službu poskytuji na všechny operační systémy vyjma iOS.
+						Může se stát, že uděláte aktualizaci systému android a zařízení se Vám bude mnohem více sekat, fotky, které dříve byly krásné, jsou dnes přesvícené a zrnité. V těchto případech se vyplatí vrátit se ke starší verzi systému. Změna operačního systému android s sebou ale nese i úskalí. Tímto krokem vám může u některých značek vypršet záruka. Zároveň dojde k úplnému smazání telefonu, ale o svá data se nemusíte bát. Zajistím zálohu i následnou obnovu vašich dat zpět do zařízení. Službu poskytuji na všechny operační systémy vyjma iOS a MAC OS.
 					</p>
 				</div>
 			</div>
 			<div class="next">
 				<div class="box" id="CDDVDDigital">
-					<h3>Digitalizace programů, filmů z CD/DVD disků a disket</h3>
+					<h3>Digitalizace CD/DVD disků a disket</h3>
 					<p>
 						Máte doma ještě hry, programy, filmy, fotky nebo písničky na CD, DVD discích nebo disketách a rádi byste je zdigitalizovali? Vaše data vám jsem schopen dát na flash disk nebo hard disk a vše již budete mít ve svých rukách.
 					</p>
@@ -200,7 +200,7 @@
 			</div>
 			<div class="next">
 				<div class="box" id="depositSMSContactsWA">
-					<h3>Záloha Vašich kontaktů, SMS a WhatsApp zpráv</h3>
+					<h3>Záloha vašich kontaktů, SMS a WhatsApp zpráv</h3>
 					<p>
 						Chystáte se ke koupi nového telefonu a nebo jsou vaše kontakty a zprávy důležité? Ať už tak nebo tak, já udělám kompletní zálohu vašich kontaktů, SMS i WhatsApp zpráv. Potom již budete mít zálohu připravenou v pohotovosti a nebudete nešťastni, že se vám porouchal telefon a vy jste přišli o důležité pacovní kontakty a zprávy.
 					</p>
